[gd_scene load_steps=7 format=3 uid="uid://b37efl70tlt4e"]

[ext_resource type="Script" path="res://Scripts/Preset_Prefab_Controller.gd" id="1_5pdoa"]
[ext_resource type="StyleBox" uid="uid://b0ha7ovj1t4wq" path="res://Styleboxs/Button/SimpleBlack_Button_Pressed.tres" id="2_5jx0t"]
[ext_resource type="StyleBox" uid="uid://d3jw442hvmgiy" path="res://Styleboxs/Button/SimpleBlack_Button_Hover.tres" id="3_yag5g"]
[ext_resource type="StyleBox" uid="uid://bm1cn6c3xs130" path="res://Styleboxs/Button/SimpleBlack_Button.tres" id="4_kf5cr"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ti0du"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
corner_detail = 20

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_4wce0"]

[node name="Main_Panel" type="Panel"]
clip_contents = true
custom_minimum_size = Vector2(185, 80)
offset_right = 40.0
offset_bottom = 40.0
theme_override_styles/panel = SubResource("StyleBoxFlat_ti0du")
script = ExtResource("1_5pdoa")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "PREFAB_NAME"
horizontal_alignment = 1
clip_text = true
text_overrun_behavior = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="BTN_APPLY" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_4wce0")
theme_override_styles/hover_pressed = ExtResource("2_5jx0t")
theme_override_styles/hover = ExtResource("3_yag5g")
theme_override_styles/pressed = ExtResource("2_5jx0t")
theme_override_styles/normal = ExtResource("4_kf5cr")
text = "Apply"

[node name="Panel" type="Panel" parent="MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(55, 0)
layout_mode = 2
theme_override_styles/panel = ExtResource("4_kf5cr")

[node name="LBL_NUM" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "00"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 1
clip_text = true

[node name="BTN_DELETE" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(55, 0)
layout_mode = 2
theme_override_colors/font_disabled_color = Color(1, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(1, 0, 0, 1)
theme_override_colors/font_hover_color = Color(1, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(1, 0, 0, 1)
theme_override_colors/font_focus_color = Color(1, 0, 0, 1)
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_styles/focus = SubResource("StyleBoxEmpty_4wce0")
theme_override_styles/hover_pressed = ExtResource("2_5jx0t")
theme_override_styles/hover = ExtResource("3_yag5g")
theme_override_styles/pressed = ExtResource("2_5jx0t")
theme_override_styles/normal = ExtResource("4_kf5cr")
text = "Delete"

[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/BTN_APPLY" to="." method="BTN_APPLY_PRESSED"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/BTN_DELETE" to="." method="BTN_DELETE_PRESSED"]
